# nixos-modules-lessons

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  flake.nix
.github/workflows/: netlify.yml
lessons/001-a-module/: eval.nix  lesson.md
lessons/010-basic-types/: config.nix  eval.nix  lesson.md  run
lessons/a-basic-module/: config.nix  eval.nix  lesson.md  options.nix
lessons/basic-types/: lesson.md  options.nix  run.sh
lessons/composed-types/: config-nested.nix  config-trivial.nix  eval-nested.nix  eval-trivial.nix  lesson.md  options-nested.nix  options-trivial.nix  run-nested.sh  run-trivial.sh
lessons/composite-types/: lesson.md
lessons/default-behavior/: lesson.md
lessons/default-values/: config-override.nix  config.nix  eval-override.nix  eval.nix  lesson.md  options.nix
lessons/documentation-functions/: build-docs-fixed.sh  build-docs.sh  docs-fixed.nix  docs.nix  lesson.md  options-fixed.nix  options.nix
lessons/extra-arguments/: build.sh  eval.nix  lesson.md  options.nix
lessons/function-arguments/: lesson.md
lessons/merging-attrsof/: lesson.md
lessons/merging-listof/: lesson.md
lessons/mkif-behavior/: lesson.md
lessons/mkoption-attributes/: lesson.md
lessons/module-evaluation/: config.nix  eval.nix  lesson.md
lessons/option-dependencies/: config.nix  eval-greeting.nix  (+3 more)
lib/: lessons.nix
presenting/: getting-started.kdl  mkoption-arguments.kdl  run-wl-mirror.sh  simple.kdl  types.kdl
site/: mkdocs.yml  pyproject.toml
site/docs/: index.md
site/docs/stylesheets/: extra.css
slides/: default.nix  nixcon-na-2024.md
(+24 files in other folders)
