[tool.poetry]
name = "modules-lessons-site"
version = "0.1.0"
description = ""
authors = ["Daniel Baker <daniel.n.baker@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = {extras = ["imaging"], version = "^9.5.8"}
paginate = "^0.5.6"
pillow = "^10.2.0"
cairosvg = "^2.7.1"
mkdocs-macros-plugin = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
